# servant-spotify

./: .travis.yml  LICENSE  README.md  servant-spotify.cabal  stack.yaml
src/Network/: Spotify.hs
src/Network/Spotify/: Client.hs
src/Network/Spotify/Api/: Auth.hs  Types.hs  User.hs
src/Network/Spotify/Api/Types/: Album.hs  AlbumSimplified.hs  Artist.hs  ArtistSimplified.hs  ExternalId.hs  Followers.hs  Image.hs  Paging.hs  Playlist.hs  PlaylistSimplified.hs  Scope.hs  SpotifyUri.hs  SpotifyUrl.hs  Track.hs  TrackSimplified.hs  User.hs
src/Network/Spotify/Internal/: Utils.hs
