name:                servant-spotify
version:             0.1.0.0
synopsis:            Bindings to the Spotify Web API via servant-client
description:         Provides a servant-client based client library for the
                     <https://developer.spotify.com/web-api/ Spotify Web API (v1)>.
                     .
                     Please see README.md
homepage:            https://github.com/chances/servant-spotify#readme
license:             BSD3
license-file:        LICENSE
author:              Chance Snow
maintainer:          git@chancesnow.me
copyright:           Copyright 2016 Chance Snow
category:            Network, Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite servant-spotify-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-spotify
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chances/servant-spotify
